[package]
name = "vnc-egui"
version = "0.2.0"
edition = "2021"

[dependencies]
eframe = { version = "0.22", features = ["glow"] }
egui = "0.22"
vnc = { path = "vnc-lib" }
log = "0.4"
env_logger = "0.10"
image = { version = "0.24", default-features = false, features = ["png"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
egui_extras = { version = "0.22", default-features = false, features = ["svg"] }
winapi = { version = "0.3.9", features = ["windef", "winuser"] }
winres = "0.1"

[build-dependencies]
winres = "0.1"

[profile.release]
opt-level = "z"     # Optimize for size
lto = true          # Enable Link Time Optimization
codegen-units = 1   # Maximum optimization
panic = "abort"     # Remove panic unwinding
strip = true        # Strip symbols
