[package]
name = "vnc"
version = "0.5.0"
authors = ["whitequark <whitequark@whitequark.org>"]
license = "MIT/Apache-2.0"
readme = "README.md"
repository = "https://github.com/whitequark/rust-vnc"
homepage = "https://github.com/whitequark/rust-vnc"
documentation = "https://whitequark.github.io/rust-vnc/vnc"
description = "An implementation of VNC protocol, client state machine, a client and a proxy"
edition = "2021"

[features]
apple-auth = ["num-bigint", "octavo", "rust-crypto"]

[dependencies]
log = "0.4"
byteorder = "1.5"
flate2 = "1.0"
num-bigint = { version = "0.4", optional = true }
# Diffie-Hellman key exchange only in octavo > 0.1.1
octavo = { git = "https://github.com/libOctavo/octavo", rev = "d94d924616dca83b9c6cfc815062276c5908713a", optional = true }
rust-crypto = { version = "0.2", optional = true }

[workspace]
members = ["client", "proxy", "vnc-egui"]

