[package]
name = "vnc-client"
version = "1.1.0"
authors = ["whitequark <whitequark@whitequark.org>"]
license = "MIT/Apache-2.0"
readme = "../README.md"
repository = "https://github.com/whitequark/rust-vnc"
homepage = "https://github.com/whitequark/rust-vnc"
description = "A VNC client"
edition = "2021"

[[bin]]
name = "rvncclient"
path = "main.rs"

[dependencies]
byteorder = "1.5"
log = "0.4"
env_logger = "0.10"
clap = { version = "4.0", features = ["derive"] }
sdl2 = "0.35"
x11 = "2.21"

[dependencies.vnc]
path = ".."
version = "0.5"

